objects/ssot__AuthorizationApplicationPlace__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AuthorizationApplicationId__c</fullName>
        <label>Authorization Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationId__c</fullName>
        <label>Authorization</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Authorization Application Place Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlaceId__c</fullName>
        <label>Place</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlaceObject__c</fullName>
        <label>Place Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512782882_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationApplicationPlace_PlaceI_rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>AuthorizationApplicationPlace_PlaceI_rel</relationshipLabel>
        <relationshipName>rel_1739512782882_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512786433_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationApplicationPlace_PlaceI_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>AuthorizationApplicationPlace_PlaceI_rel</relationshipLabel>
        <relationshipName>rel_1739512786433_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512789809_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationApplicationPlace_Author_rel</label>
        <referenceTo>ssot__PartyBusinessLicense__dlm</referenceTo>
        <relationshipLabel>AuthorizationApplicationPlace_Author_rel</relationshipLabel>
        <relationshipName>rel_1739512789809_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>